--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -1,3 +1,7 @@
+<nav>
+<a routerLink="/login">Login</a>
+<a routerLink="/create-account">Create Account</a>
+</nav>
 <br>
 <form action="/action_page.php">
 User Name: <input type="text" name="userName" ><br>
