--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,7 @@
+<nav>
+<a routerLink="/login">Login</a>
+<a routerLink="/create-account">Create Account</a>
+</nav>
 <br>
 <form action="/action_page.php">
 User Name: <input [(ngModel)]="username" placeholder = "name" [ngModelOptions]="{standalone: true}"/> <br>
