--- a/src/app/create-account/create-account.component.html
+++ b/src/app/create-account/create-account.component.html
@@ -4,6 +4,8 @@
 </nav>
 <br>
 <form action="/action_page.php">
+CwC UK Code: <input type="text" name="officialCode" ><br>
+<br>
 User Name: <input type="text" name="userName" ><br>
 <br>
 Password: <input type="text" name="password" ><br>
