--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -5,12 +5,21 @@
 <a routerLink="/news">Chat</a>
 </nav>
 <p> 
-	After fighting to get a diagnosis, Sophie found out her seven month old, Ted, had acute lyphblastic leukaemia. For several months before the diagnosis, Ted was in constant pain. He was given a 50% chance of survival, which is above average for this type of cancer. He had 18 months of chemotherapy, often in an isolation unit and after many months of uncertainity 
+	After fighting to get a diagnosis, Sophie found out her seven month old, Ted, had acute lyphblastic leukaemia. For several months before the diagnosis, Ted was in constant pain. He was given a 50% chance of survival, which is above average for this type of cancer. He had 18 months of chemotherapy, often in an isolation unit due to the constant infections. After several years of uncertainity and numerous ups and downs, Ted was finally out of treatment. The chemo has had long term effects on Ted's health but he is still fighting.  
 	<br>
-	Cancer: acute lymphoblastic leukaemia
+	Sophie is happy to help with any questions related to acute lymphoblastic leukaemia, London hospitals and getting a diagnosis.
+	<br><br>
+	Tags:
 	<br>
-	Hospital: Great Ormond Street
+	acute lymphoblastic leukaemia, Great Ormond Street, London
 </p>
 <p>
-
+	After fighting to get a diagnosis, Sophie found out her seven month old, Ted, had acute lyphblastic leukaemia. For several months before the diagnosis, Ted was in constant pain. He was given a 50% chance of survival, which is above average for this type of cancer. He had 18 months of chemotherapy, often in an isolation unit due to the constant infections. After several years of uncertainity and numerous ups and downs, Ted was finally out of treatment. The chemo has had long term effects on Ted's health but he is still fighting.  
+	<br>
+	Sophie is happy to help with any questions related to acute lymphoblastic leukaemia, London hospitals and getting a diagnosis.
+	<br><br>
+	Tags:
+	<br>
+	acute lymphoblastic leukaemia, Great Ormond Street, London
+</p>
 </p>
