--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,6 +1,6 @@
 <nav>
 <a routerLink="/news">News</a>
-<a routerLink="/news">Profile</a>
+<a routerLink="/profile">Profile</a>
 <a routerLink="/news">Forum</a>
 <a routerLink="/news">Chat</a>
 </nav>
@@ -22,4 +22,4 @@
 	<br>
 	acute lymphoblastic leukaemia, Great Ormond Street, London
 </p>
-</p>
+
