--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,6 +1,7 @@
 <nav>
 <a routerLink="/news">News</a>
 <a routerLink="/profile">Profile</a>
+<a routerLink="/buddy">Buddy</a>
 <a routerLink="/news">Forum</a>
 <a routerLink="/news">Chat</a>
 </nav>
