--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,7 +2,7 @@
 <a routerLink="/news">News</a>
 <a routerLink="/profile">Profile</a>
 <a routerLink="/buddy">Buddy</a>
-<a routerLink="/news">Forum</a>
+<a routerLink="/forum">Forum</a>
 <a routerLink="/news">Chat</a>
 </nav>
 
