--- a/src/app/buddy/buddy.component.html
+++ b/src/app/buddy/buddy.component.html
@@ -3,7 +3,7 @@
 <a routerLink="/news">News</a>
 <a routerLink="/profile">Profile</a>
 <a routerLink="/buddy">Buddy</a>
-<a routerLink="/news">Forum</a>
+<a routerLink="/forum">Forum</a>
 <a routerLink="/news">Chat</a>
 </nav>
 
