--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -12,14 +12,23 @@
 	<br><br>
 	Tags:
 	<br>
-	acute lymphoblastic leukaemia, Great Ormond Street, London
+	acute lymphoblastic leukaemia,  Great Ormond Street, London
 </p>
 <p>
-	After fighting to get a diagnosis, Sophie found out her seven month old, Ted, had acute lyphblastic leukaemia. For several months before the diagnosis, Ted was in constant pain. He was given a 50% chance of survival, which is above average for this type of cancer. He had 18 months of chemotherapy, often in an isolation unit due to the constant infections. After several years of uncertainity and numerous ups and downs, Ted was finally out of treatment. The chemo has had long term effects on Ted's health but he is still fighting.
+	After having experienced symptoms such as bruising and nose bleeds, Blue was diagnosed with acute myeloid leukaemia (an aggressive type of blood cancer) in march 2011. After several hospital transfers which separated Blue from his family and the support they provided. Blue had to endure many treatment programs, as the cancer went into remission before returning. Doctors were predicting the worse, and Blue undertook a risky treatment as his ultimate option. However, Blue's condition started improving after he received a bone marrow transplant. Blue left hospital two years later, and was finally declared cured in 2017.
 	<br>
-	Sophie is happy to help with any questions related to acute lymphoblastic leukaemia, London hospitals and getting a diagnosis.
+	Blue is one of the few who have managed to fight this aggressive type of cancer. He was the youngest child to ever test some new drugs for this type of cancer. He is willing to share his experience with other children going through what he has faced.
 	<br><br>
 	Tags:
 	<br>
-	acute lymphoblastic leukaemia, Great Ormond Street, London
+	acute myeloid leukaemia, Addenbrooks in Cambridge, The Royal Marsden in Sutton
+</p>
+<p>
+	Oscar's parents' world fell apart on the day they were told he had rhabdomyosarcoma of the right temporal fossa. Oscar went through his first surgery, which would unfortunatly not be his last due to inadequate healthy tissue margins. After long weeks spent in Germany to receive further treatment, Oscar was finally cured an able to return to the UK. His parents have highlighted that Oscar's courage and positivity is what kept them going.
+	<br>
+	Oscar and his parents are happy to discuss how his attitude towards the disease helped him get through it. 
+	<br><br>
+	Tags:
+	<br>
+	 Rhabdomyosarcoma, germany
 </p>
