--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>{{title}}</h1>
-<app-main></app-main>
+<!--<app-main></app-main> -->
 <router-outlet></router-outlet>
 <!-- <app-messages></app-messages> -->
