--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,9 +4,9 @@
 </nav>
 <br>
 <form action="/action_page.php">
-User Name: <input [(ngModel)]="username" placeholder = "name" [ngModelOptions]="{standalone: true}"/> <br>
+User Name: <input [(ngModel)]="username" placeholder = "User name" [ngModelOptions]="{standalone: true}"/> <br>
 <br>
-Password: <input type="text" name="password" ><br>
+Password: <input [(ngModel)]="password" placeholder = "Password" [ngModelOptions]="{standalone: true}"><br>
 <br>
 <button (click)="isParent(username)">Submit</button>
 </form>
