Moving towards the right direction

--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -3,7 +3,7 @@
 <a routerLink="/profile">Profile</a>
 <a routerLink="/buddy">Buddy</a>
 <a routerLink="/forum">Forum</a>
-<a routerLink="/news">Chat</a>
+<a routerLink="/chat-parents">Chat</a>
 </nav>
 
 <br>
