--- a/src/app/welcome-fun-kid/welcome-fun-kid.component.html
+++ b/src/app/welcome-fun-kid/welcome-fun-kid.component.html
@@ -1,7 +1,5 @@
 <nav>
-<a routerLink="/funKid">News</a>
-<a routerLink="/funKid">Profile</a>
-<a routerLink="/funKid">Forum</a>
+<a routerLink="/funKid">Fun Page</a>
 <a routerLink="/funKid">Chat</a>
 </nav>
 <p>
