--- a/src/app/buddy/buddy.component.html
+++ b/src/app/buddy/buddy.component.html
@@ -4,7 +4,7 @@
 <a routerLink="/profile">Profile</a>
 <a routerLink="/buddy">Buddy</a>
 <a routerLink="/forum">Forum</a>
-<a routerLink="/news">Chat</a>
+<a routerLink="/chat-parents">Chat</a>
 </nav>
 
 <br>
@@ -12,7 +12,7 @@
  <div class="row">
   <div class="column">
     <div class="card">
-      <img src="img1.jpg" alt="Jane" style="width:100%">
+      <img src  ="sophie1.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Jane Doe</h2>
         <p class="title">CEO &amp; Founder</p>
