--- a/src/app/chat-parents/chat-parents.component.html
+++ b/src/app/chat-parents/chat-parents.component.html
@@ -1,4 +1,10 @@
-<p>
-  chat-parents works!
-</p>
+<nav>
+<a routerLink="/news">News</a>
+<a routerLink="/profile">Profile</a>
+<a routerLink="/buddy">Buddy</a>
+<a routerLink="/forum">Forum</a>
+<a routerLink="/chat-parents">Chat</a>
+</nav>
+  <h2>Emma Stone</h2>
+
 <app-messages></app-messages>
