Added forum changes etc

--- a/src/app/chat-kid/chat-kid.component.html
+++ b/src/app/chat-kid/chat-kid.component.html
@@ -1,3 +1,9 @@
-<p>
-  chat-kid works!
-</p>
+ <nav>
+<a routerLink="/funKid">Fun Page</a>
+<a routerLink="/chat-kid">Chat</a>
+</nav>
+
+ <h2>Hayley</h2>
+
+<app-messages></app-messages>
+
