--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -23,6 +23,9 @@
 <br>
 
 <article>
-      <h2>Title</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo molestias ex officia eligendi reiciendis fuga magnam? Ullam ut ab doloremque accusamus iusto aliquam facilis sapiente!</p>
+      <h2>Any good food recommendations around The Royal London Hospital?</h2>
+      <p>Yes. There is a nice place around the hospital: The Gourmet Hut. Really recommended!</p>
+      <strong>Tags:</strong>
+	<br>
+	<strong>places-to-eat,  The Royal London Hospital, London</strong>
     </article>
