--- a/src/app/welcome-fun-kid/welcome-fun-kid.component.html
+++ b/src/app/welcome-fun-kid/welcome-fun-kid.component.html
@@ -1,6 +1,6 @@
-<nav>
+ <nav>
 <a routerLink="/funKid">Fun Page</a>
-<a routerLink="/funKid">Chat</a>
+<a routerLink="/chat-kid">Chat</a>
 </nav>
 <p>
   welcome-fun-kid works!
