--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,6 +6,10 @@
 <a routerLink="/news">Chat</a>
 </nav>
 
+<br>
+<br>
+ <img src  ="../assets/images/olly.png" style="width:35%">
+
 <div class="page">
   <div class="page__demo">
     <div class="main-container page__container">
