--- a/src/app/chat-parents/chat-parents.component.html
+++ b/src/app/chat-parents/chat-parents.component.html
@@ -5,6 +5,11 @@
 <a routerLink="/forum">Forum</a>
 <a routerLink="/chat-parents">Chat</a>
 </nav>
+<br>
+<nav>
+<a routerLink="/chat-parents">Your Chat</a>
+<a routerLink="/chat-parents">Ollie's Chat</a>
+</nav>
   <h2>Emma Stone</h2>
 
 <app-messages></app-messages>
