--- a/src/app/buddy/buddy.component.html
+++ b/src/app/buddy/buddy.component.html
@@ -15,36 +15,36 @@
       <img src  ="../assets/images/sophie1.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Jane Doe</h2>
-        <p class="title">CEO &amp; Founder</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
+        <p class="title">Mum of leukaemia survivor</p>
+        <p>My daughter has just finised treament for acute lymphoblastic leukaemia. </p>
+        <p>Always around for a chat :). </p>
+        <p><button class="button">Profile</button></p>
       </div>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <img src="img2.jpg" alt="Mike" style="width:100%">
+      <img src="img2.jpg" alt="Brian" style="width:100%">
       <div class="container">
-        <h2>Mike Ross</h2>
-        <p class="title">Art Director</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
+        <h2>Dr Brian May</h2>
+        <p class="title">Surgeon at Great Ormond Street</p>
+        <p>Feel free to message me if you want to talk about any medical concerns.</p>
+        <p>Making you more prepared for your journey is my goal.</p>
+        <p><button class="button">Profile</button></p>
       </div>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <img src="img3.jpg" alt="John" style="width:100%">
+      <img src="img3.jpg" alt="Sam" style="width:100%">
       <div class="container">
-        <h2>John Doe</h2>
-        <p class="title">Designer</p>
-        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-        <p>example@example.com</p>
-        <p><button class="button">Contact</button></p>
+        <h2>Sam Gamgee</h2>
+        <p class="title">Feeling lost</p>
+        <p>My child is currently in and out of the hospital and the chemo is really taking its toll.</p>
+        <p>Just looking for someone to talk to about the whole process, preferably near London. A bonus if they like gardening!</p>
+        <p><button class="button">Profile</button></p>
       </div>
     </div>
   </div>
