--- a/src/app/chat-kid/chat-kid.component.html
+++ b/src/app/chat-kid/chat-kid.component.html
@@ -3,7 +3,17 @@
 <a routerLink="/chat-kid">Chat</a>
 </nav>
 
- <h2>Hayley</h2>
+<p><b>Username:</b>
+Red Rose
+</p>
+<h3>Achievements</h3>
+<ul>
+  <li>Time spent at hospital: 3 months (next 12 months)</li><img src="a1.jpg" alt="Purple Silver">
+  <li>Number of posts: 33</li><img src="a2.jpg" alt="Green Gold">
+  <li>Becoming buddies with someone: 1 buddy (next 3 buddies)</li><img src="a3.jpg" alt="Red Bronze">
+  <li>Writing stories: 0 stories (next 1 story) </li><img src="a4.jpg" alt="Locked">
+</ul>
+
+<h2>Hayley</h2>
 
 <app-messages></app-messages>
-
