--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,7 +8,16 @@
 
 <br>
 <br>
- <img src  ="../assets/images/olly.png" style="width:35%">
+ <h1 align=center>Sophie's son - Ollie</h1>
+
+
+<div class="clearfix">
+ <img src  ="../assets/images/olly.png" style="width:35%" style="width:170px;height:170px;margin-right:15px;">  
+
+
+</div>
+
+
 
 <div class="page">
   <div class="page__demo">
