Don't stop me know! ..... I don't have enough time to finish

--- a/src/app/chat-parents2/chat-parents2.component.html
+++ b/src/app/chat-parents2/chat-parents2.component.html
@@ -10,6 +10,6 @@
 <a routerLink="/chat-parents">Your Chat</a>
 <a routerLink="/chat-parents2">Ollie's Chat</a>
 </nav>
-  <h2>Emma Stone</h2>
+  <h2>Hayley</h2>
 
-<app-messages></app-messages>
+<app-messages2></app-messages2>
