--- a/src/app/chat-kid/chat-kid.component.html
+++ b/src/app/chat-kid/chat-kid.component.html
@@ -8,10 +8,10 @@ Red Rose
 </p>
 <h3>Achievements</h3>
 <ul>
-  <li>Time spent at hospital: 3 months (next 12 months)</li><img src="a1.jpg" alt="Purple Silver">
-  <li>Number of posts: 33</li><img src="a2.jpg" alt="Green Gold">
-  <li>Becoming buddies with someone: 1 buddy (next 3 buddies)</li><img src="a3.jpg" alt="Red Bronze">
-  <li>Writing stories: 0 stories (next 1 story) </li><img src="a4.jpg" alt="Locked">
+  <li>Time spent at hospital: 3 months (next 12 months)</li><img src="Achievement_img\a1.jpg" alt="Purple Silver" width="120" height="180">
+  <li>Number of posts: 33</li><img src="Achievement_img\a2.jpg" alt="Green Gold" width="100" height="180">
+  <li>Becoming buddies with someone: 1 buddy (next 3 buddies)</li><img src="Achievement_img\a3.jpg" alt="Red Bronze" width="140" height="180">
+  <li>Writing stories: 0 stories (next 1 story) </li><img src="Achievement_img\a4.jpg" alt="Locked" width="170" height="180">
 </ul>
 
 <h2>Hayley</h2>
