--- a/src/app/welcome-fun-kid/welcome-fun-kid.component.html
+++ b/src/app/welcome-fun-kid/welcome-fun-kid.component.html
@@ -17,10 +17,10 @@ body {font-family: "Raleway", Arial, sans-serif}
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
   <nav>
-<a routerLink="/funKid">News</a>
+<a routerLink="/funKid">Home</a>
 <a routerLink="/funKid">Profile</a>
 <a routerLink="/funKid">Forum</a>
-<a routerLink="/funKid">Chat</a>
+<a routerLink="/chat-kid">Chat</a>
 </nav>
     <a href="#" class="w3-left w3-button w3-white">Welcome to the fun page</a>
   </header>
@@ -38,7 +38,7 @@ body {font-family: "Raleway", Arial, sans-serif}
       <img src="../assets/images/streetart4.jpg" style="width:100%">
     </div>
   </div>
-  
+
 <!-- End Page Content -->
 </div>
 
@@ -59,6 +59,6 @@ body {font-family: "Raleway", Arial, sans-serif}
     he had never seen anyone with such a bad cancer go through to a cure."</i></p>
   </form>
 </footer>
- 
+
 </body>
 </html>
