It's the final countdown! #mostAgileTeamEU

--- a/src/app/welcome-fun-kid/welcome-fun-kid.component.html
+++ b/src/app/welcome-fun-kid/welcome-fun-kid.component.html
@@ -22,7 +22,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 <a routerLink="/funKid">Forum</a>
 <a routerLink="/chat-kid">Chat</a>
 </nav>
-    <a href="#" class="w3-left w3-button w3-white">Welcome to the fun page</a>
+    <a class="w3-left w3-button w3-white">Welcome to the fun page</a>
   </header>
 
   <!-- Photo Grid -->
